<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wl_surface_yellow"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingTop="32dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/title_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/title_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/friends"
            android:src="@drawable/friends_fragment_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/title_guide_left"
            app:layout_constraintRight_toRightOf="@id/title_guide_right"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pendingFriendsFragmentButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/pending_friends_fragment_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/title_guide_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pendingFriendsNotificationNumber"
            style="@style/TextAppearance.Wellnest.PendingFriendNotificationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/wl_space_m"
        app:layout_constraintTop_toTopOf="@id/title_guide">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/friends_title_height"
            android:src="@drawable/add_friends_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_friend_search">

            <EditText
                android:id="@+id/friendSearchEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/friend_search_height"
                android:autofillHints="emailAddress"
                android:background="#00000000"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/enter_friends_email_hint"
                android:imeOptions="actionDone"
                android:paddingHorizontal="@dimen/wl_space_m"
                android:singleLine="true"
                android:textColor="@color/wl_onSurface"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/friendSearchSendButton"
                android:layout_width="@dimen/friend_send_button_width"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/wl_space_m"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:src="@drawable/friend_send_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/friendSearchEditText"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchContainer" />

    <FrameLayout
        android:id="@+id/friends_navbar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>