...
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/wl_space_m"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/accept_friend_icon"
        app:layout_constraintRight_toLeftOf="@id/remove_friend_button" />

    <ImageButton
        android:id="@+id/remove_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
...
